mengubah framework GUI dari JavaFX ke Swing. Selain itu, beberapa penyesuaian dilakukan pada kelas repositori dan layanan untuk memperbaiki metode penyimpanan pengguna.